<resources>
    <string name="app_name">BrainHealth</string>
    <string name="activity_main_header"><b>Unggah hasil <i>scan MRI</i> dan cek kesehatan otak Anda sekarang juga!</b></string>
    <string name="activity_main_fragment_upload_header"><b>Unggah file</b></string>
    <string name="activity_main_fragment_camera_header"><b>Ambil Gambar</b></string>
    <string name="activity_main_fragment_submit_header"><b>File berhasil diunggah!</b></string>
    <string name="activity_main_fragment_result_header"><b>Hasil Anda adalah</b></string>
    <string name="activity_main_fragment_upload_button_drag_and_drop">Drag and drop</string>
    <string name="activity_main_fragment_upload_button_browse">Upload Gambar</string>
    <string name="activity_main_fragment_upload_button_camera">Ambil Gambar</string>
    <string name="activity_main_fragment_submit_button_submit">Submit</string>
    <string name="activity_main_fragment_result_button_retake">Retake</string>
    <string name="history_keseluruhan">Semua</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sehat">Sehat</string>
    <string name="tidak_sehat">Tidak Sehat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="result_healthy"><![CDATA[<b>Sehat!</b> Tidak ada tumor terdeteksi.]]></string>
    <string name="result_disease"><![CDATA[<b>Tidak sehat.</b> Terdapat tumor jenis %1$s terdeteksi. Hubungi rumah sakit terdekat untuk penanganan lebih lanjut.]]></string>
    <string name="activity_main_fragment_submit_button_crop">Crop</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="title_chat">Chat</string>
    <string name="brain_health">Brain Health</string>
    <string name="brain_health_desc">Merupakan aplikasi yang dapat mendeteksi tumor otak dari citra MRI. Kecerdasan buatan kami dapat menolong Anda untuk memberikan diagnosis cukup dengan menggunggah citra MRI Anda!</string>
    <string name="continue_text">Selanjutnya</string>
    <string name="onboarding2_header">Jangan ragu untuk meminta bantuan!</string>
    <string name="onboarding2_desc">Dilengkapi dengan fitur chat yang dapat menghubungi pakar penyakit otak terdekat berdasarkan lokasi dan alamat Anda. Semoga Anda sehat selalu!</string>
    <string name="choose_your_role">Pilih Peran Anda</string>
    <string name="select_text">Silakan klik untuk mendaftar sebagai</string>
    <string name="dokter">Dokter</string>
    <string name="pasien">Pasien</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_text">Selamat datang!</string>
    <string name="enter_email">Email</string>
    <string name="email_format_is_not_correct">Format email belum benar!</string>
    <string name="enter_password">Kata Sandi</string>
    <string name="password_can_t_be_lower_than_8_characters">Minimal 8 karakter!</string>
    <string name="welcome_desc">Silakan melengkapi data ini untuk masuk ke akunmu.</string>
    <string name="login">Masuk</string>
    <string name="register"><![CDATA[Belum memiliki Akun? <b>Daftar</b>]]></string>
    <string name="make_account">Buat Akun</string>
    <string name="welcome_to_brain_health">Welcome to Brain Health</string>
    <string name="welcome_desc_register">Silakan membuat akun baru untuk mengakses aplikasi ini.</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="no_telp">Nomor Telepon</string>
    <string name="welcome_text_pasien">Selamat datang, Pasien!</string>
    <string name="welcome_text_dokter">Selamat datang, Dokter!</string>
    <string name="activity_main_fragment_upload_button_dcm">Masukkan Link DICOM</string>
    <string name="dr_mawar_haqqy">Dr. Mawar Haqqy</string>
    <string name="halo_apa_ada_yang_bisa_saya_bantu">Halo! Apa ada yang bisa saya bantu?</string>
    <string name="today">Today</string>
    <string name="alert_title">Alert Title</string>
    <string name="input_name_header">Masukkan nama pasien anda</string>
    <string name="dcm_header">Masukkan link file dengan format .dcm</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="update_profile">Update Profile</string>
    <string name="tempat_lahir">Tempat lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="rekomendasi_perawatan">Rekomendasi Perawatan</string>
    <string name="sample_recommendation">Pengobatan Meningioma dapat dilakukan dengan operasi, embolisasi endovaskular, radioterapi, dan kemoterapi.</string>
    <string name="_1_operasi">1. Operasi</string>
    <string name="operasi_description">Operasi bertujuan untuk mengangkat tumor. Namun, jika tumor tumbuh di daerah yang sulit terjangkau, tumor mungkin tidak bisa diangkat seluruhnya. Dalam hal ini, dokter hanya akan mengangkat tumor yang masih mungkin untuk diangkat dan menggunakan metode lain untuk menghilangkan sisa tumor.</string>
    <string name="_2_embolisasi">2. Embolisasi endovaskular</string>
    <string name="embolisasi_description">Embolisasi endovaskular dilakukan jika operasi tidak dapat mengangkat seluruh tumor yang ada. Pengobatan ini bertujuan untuk menghentikan aliran darah ke meningioma agar ukurannya menyusut.\nDalam prosesnya, dokter akan memasukkan kateter ke pembuluh darah yang menyuplai meningioma, kemudian memasukkan lilitan atau lem khusus untuk menghalangi aliran darah ke tumor.</string>
    <string name="warning_message">Segera hubungi rumah sakit terdekat untuk penanganan lebih lanjut. Klik riwayat untuk mengetahui rekomendasi perawatan</string>
    <string name="logout">Logout</string>
    <string name="isi">Isi</string>
    <string name="unknown">unknown</string>
    <string name="menu_refresh">Refresh</string>

</resources>